# CS378-GT

./: Balla  BaseApplication.cpp  BaseApplication.cpp~  GameDescriptionBalla.txt  GameObject.cpp~  GameObject.h~  Makefile  Makefile.am  Makefile.am~  Makefile.in  README.md  README.txt  SoundManager.cpp  SoundManager.cpp~  SoundManager.h~  TutorialApplication.cpp  TutorialApplication.cpp~  TutorialApplication.h  TutorialApplication.h~  config.log~  config.status  configure  configure.ac~  libtool  libtool~  proj1  resources.cfg~  server  server.cpp  server.cpp~
CS378_GT_2013/Red Ace/: AdvancedOgreFramework.cpp~  AppStateManager.cpp~  AppStateManager.hpp  CampaignState.cpp~  DemoApp.cpp  DemoApp.cpp~  DemoApp.hpp~  GameState.cpp~  Makefile  Makefile.am  Makefile.am~  Makefile.in  ManualState.cpp  ManualState.hpp  ManualState.hpp~  MenuState.cpp  MenuState.cpp~  MenuState.hpp  PauseState.cpp  PauseState.cpp~  config.status  gamestates.txt  gamestates.txt~  rapidxml.hpp~  resources.cfg~
FuckThisOgre/: Ballin.cpp  Ballin.h  BasicTutorial05.cpp  BasicTutorial05.h  BasicTutorial2.cpp  BasicTutorial3.cpp  BasicTutorial3.h  BasicTutorial4.cpp  BasicTutorial4.h  BasicTutorial6.cpp  BasicTutorial6.h  BasicTutorial7.cpp  BasicTutorial7.h  BasicTutorial8.cpp  BasicTutorial8.h  GameApplication.h  GameFrameListener.h  GameMain.cpp  ITutorial01.cpp  ITutorial01.h  Makefile  Makefile.am  Makefile.in  OgreApp  TutorialApplication.cpp  config.status  configure  configure.ac  libtool  plugins.cfg  resources.cfg
FuckThisOgre/.deps/: OgreApp-Ballin.Po  OgreApp-BaseApplication.Po  OgreApp-BasicTutorial05.Po  OgreApp-BasicTutorial2.Po  OgreApp-BasicTutorial3.Po  OgreApp-BasicTutorial4.Po  OgreApp-BasicTutorial6.Po  OgreApp-BasicTutorial8.Po  OgreApp-ITutorial01.Po  OgreApp-TutorialApplication.Po
FuckThisOgre/autom4te.cache/: output.0  (+3 more)
WW3/: .SingleGameState.cpp.swp  AdvancedOgreFramework.cpp~  AdvancedOgreFramework.hpp  AppState.hpp~  AppStateManager.cpp  ClientGameState.cpp  ClientGameState.cpp~  ClientGameState.hpp  ClientGameState.hpp~  CreateScene.cpp~  DemoApp.cpp  DemoApp.hpp  Description.txt  Description.txt~  Description~  EditString.cpp  EditString.h  GameObject.h  GameState.cpp~  GameState.hpp~  HexTile.cpp  HexTile.cpp~  HexTile.h  HostGameState.cpp  HostGameState.cpp~  HostGameState.hpp  HostGameState.hpp~  JoinState.cpp  Makefile  Makefile.am  Makefile.am~  Makefile.in  MenuState.cpp  MenuState.cpp~  MultiGameState.hpp  PauseState.cpp  Planet.cpp  Planet.cpp~  Planet.h  Planet.h~  (+25 more)
project1_wonjun/: BaseApplication.cpp  ControlListener.cpp  ControlListener.cpp~  ControlListener.h  ControlListener.h~  DESCRIPTION.txt  GameObject.cpp  GameObject.cpp~  GameObject.h  GameObject.h~  Makefile  Makefile.am  Makefile.am~  Makefile.in  OgreApp  OgreMotionState.cpp~  OgreMotionState.h~  README.txt  Simulator.cpp  Simulator.cpp~  Simulator.h~  SinglePlayer.h  SoundManager.h  SoundManager.h~  TutorialApplication.cpp  TutorialApplication.cpp~  TutorialApplication.h  TutorialApplication.h~  config.status  configure  configure.ac  configure.ac~  libtool  plugins.cfg  resources.cfg  valgrind_output.txt
(+235 files in other folders)
